Clean-up code in 'io.usethesource.capsule.jmh'